pagination optimization and cont validation